refactor: get uuid swagger docs and exmaples
